Updated image in Services Popup for mobile and desktop, also was missing ../images so wasn't showing previously.  Added clients payment link for their products on shop.html.  Adjusting carousel.js it had error report on showPopup now fixed but still on mobile popups aren't opening

--- a/css/styles.css
+++ b/css/styles.css
@@ -385,7 +385,7 @@ header{
   width: 100%;
   height: 180px;
   padding: 6px 12px;
-  background-image: url("/logo/scm_logo_high_res_og_img.png");
+  background-image: url("../images/service-card-carousel.png");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 15px;
@@ -590,10 +590,13 @@ figcaption {
     margin: 0 auto;
     margin-left: 0;
     grid-template-columns: 200px;
-    grid-template-rows: 30px 25px 25px 25px 50px;
-    column-gap: 5px;
+    grid-template-rows: 30px 25px 25px 20px 25px;
+    column-gap: 5px;  
 }
- 
+.scm_contact_info_grid p{ 
+  font-size: 12px;
+}
+
 /*social media logos*/
 .fb_logo, .instagram_logo{
     width: 20px;
